updated resume and experience section

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -56,9 +56,8 @@
             <h2>Sample Pack Content Creator - <em>Samples for Mars, Epic Sock Media, Splice</em></h2>
             <p class="duration">2012 - Present</p>
             <ul>
-                <li>Produced and delivered professional sample packs for major online platforms by recording, editing, and batch-processing
-                thousands of audio assets, while mastering vintage analog/digital hardware, leveraging modern DAW scripting tools, and
-                overseeing UI, developer and graphic design teams for custom GUI applications</li>
+                <li>Oversaw team of software developers, graphic designers and sound designers to create custom GUI applications which
+                demanded series of tests and quality control to ensure flawless deliverables</li>
                 <li>Designed and implemented custom sound design tools and generative audio systems using ChucK and Max/MSP, applying
                 real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound design</li>
             </ul>
@@ -67,8 +66,8 @@
             <h2>Educator for Electronic Music Production - <em>SoundFly</em></h2>
             <p class="duration">2021 - 2025</p>
             <ul>
-                <li>Mentored students by creating detailed lesson plans and videos that covered all facets of electronic music production
-                including DAWs, production, mixing, sound design, arranging, mastering and music business
+                <li>Mentored students by creating detailed lesson plans and videos that covered all facets of
+                 electronic music production
                 </li>
             </ul>
         </div>
@@ -76,9 +75,9 @@
             <h2>Sound Designer, Mixer and Composer - <em>Freelance, Hyperballad Music</em></h2>
             <p class="duration">2008 - 2024</p>
             <ul>
-                <li>Provided 360 audio solutions for international ad campaigns for Google, Ford, Kraft, Kate Spade, Volkswagen and UNIQLO
-                to create impactful, high-quality music, mixes and sound design.</li>
-                <li>Managed teams of composers, sound designers, musicians and vocalist to deliver audio assets under tight deadlines</li>
+                <li>Provided 360 audio solutions for international advertising campaigns by organizing teams of creatives while maintaining
+                fluent communication with clients to assure project alignment and timely delivery of assets.
+                </li>
             </ul>
         </div>
         <div class="job">
@@ -111,8 +110,11 @@
                 <p class="duration">2023 - 2024</p>
                 <ul>
                     <li>Certification in Software Development</li>
-                    <li>C#, Python, Django, .NET Framework, T-SQL/SQL, MVC, CRUD, HTML, CSS, JavaScript, T-SQL/SQL, Agile / SCRUM and web
-                    application development.</li>
+                    <li>Immersive Full Stack Software Developer boot camp with over 600 hours of instruction and hands-on coding. Predominantly
+                    the program is based on C# and Python, along with the fundamentals of Computer Science, Django, .NET Framework,
+                    T-SQL/SQL, CRUD, MVC, HTML, CSS, JavaScript, Agile / SCRUM and web application development. Completed numerous practical projects available
+                    <a href="https://github.com/ahamadey27/Coding-Portfolio" target="_blank" style="color: #295f4e;">here</a>
+                    </li>
                 </ul>
             </div>
             <div class="job">
