--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -239,7 +239,7 @@
                      bug fixing, and platform-specific optimization for Windows distribution.
                 </p>
                 <p class="project-links">
-                    <a href="https://github.com/ahamadey27/Gulag_Game" target="_blank">GitHub</a> |
+                    <a href="https://github.com/ahamadey27/Coding-Portfolio/tree/main/C%23/Death_In_The_Gulag" target="_blank">GitHub</a> |
                     <a href="https://store.steampowered.com/app/3436480/Death_in_the_Gulag/"
                         target="_blank">Live Demo</a>
                 </p>
