Refined resume content and experience descriptions for clarity and detail

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -44,12 +44,11 @@
             <h2>Video Game Sound Designer & Developer - <em>Freelance</em></h2>
             <p class="duration">2022 - Present</p>
             <ul>
+                <li>Used the game engine Unity to create indie video games for solo and team projects by leveraging C# scripts to implement
+                core gameplay mechanics and interactive features</li>
                 <li>Developed and implemented robust audio management pipelines using middleware Audiokinetic’s Wwise and Unreal MetaSounds
-                plus custom scripts in C# and C++, optimizing performance and enhancing audio interactivity.
-                </li>
-                <li>Created engaging original sound design, music and foley for indie video games in a team setting by translating
-                creatives’ ideas into sound while maintaining organized audio pipelines to keep up in real time with evolving game
-                development</li>
+                plus custom scripts in C# and C++, optimizing performance and enhancing audio interactivity through creating robust
+                audio pipelines</li>
             </ul>
         </div>
         <div class="job">
@@ -58,8 +57,8 @@
             <ul>
                 <li>Oversaw team of software developers, graphic designers and sound designers to create custom GUI applications which
                 demanded series of tests and quality control to ensure flawless deliverables</li>
-                <li>Designed and implemented custom sound design tools and generative audio systems using ChucK and Max/MSP, applying
-                real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound design</li>
+                <li>Designed and implemented custom sound design tools and generative audio systems using using advanced audio tools,,
+                applying real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound design</li>
             </ul>
         </div>
         <div class="job">
@@ -76,7 +75,8 @@
             <p class="duration">2008 - 2024</p>
             <ul>
                 <li>Provided 360 audio solutions for international advertising campaigns by organizing teams of creatives while maintaining
-                fluent communication with clients to assure project alignment and timely delivery of assets.
+                fluent communication with clients to assure project alignment and timely delivery of assets</li>
+                <li>Translated client requirements into actionable project plans, ensuring technical feasibility and successful execution
                 </li>
             </ul>
         </div>
