--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -134,6 +134,7 @@
                 <li>Back-End Development with .NET (Microsoft)</li>
                 <li>Foundations of Coding Back-End (Microsoft)</li>
                 <li>Introduction to Programming With C# (Microsoft)</li>
+                <li>Learn C# (Codecademy)</li>
                 <li>Foundational C# with Microsoft (freeCodeCamp)</li>
                 <li>Intro to Cloud Computing Course (Codecademy)</li>
             </ul>
