Updated resume and experience sections to reflect current role and skills, enhancing clarity and relevance.

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -41,55 +41,42 @@
             <!-- Introduction text with name highlight -->
         <h1 class="section-title"><span class="section-number"></span> Experience</h1>
         <div class="job">
-            <h2>Video Game Sound Designer & Developer - <em>Freelance</em></h2>
-            <p class="duration">2022 - Present</p>
+            <h2>Junior Software Developer (Student, Web Apps)</h2>
+            <p class="duration">2023 – Present</p>
             <ul>
-                <li>Used the game engine Unity to create indie video games for solo and team projects by leveraging C# scripts to implement
-                core gameplay mechanics and interactive features</li>
-                <li>Developed and implemented robust audio management pipelines using middleware Audiokinetic’s Wwise and Unreal MetaSounds
-                plus custom scripts in C# and C++, optimizing performance and enhancing audio interactivity through creating robust
-                audio pipelines</li>
+                <li>Studied core backend and full stack development daily through certifications, coding challenges, books, and algorithm/design pattern practice to strengthen foundational skills.</li>
+                <li>Built nearly a dozen practical web apps in Azure to apply coding concepts and workflows, including creative personal projects like a wake alert tool that tracks passing freighters via API for surf timing and a greedy-algorithm-based lumber cutter app that optimizes board usage.</li>
             </ul>
         </div>
         <div class="job">
-            <h2>Sample Pack Content Creator - <em>Samples for Mars, Epic Sock Media, Splice</em></h2>
-            <p class="duration">2012 - Present</p>
+            <h2>Video Game Sound Designer & Developer - <em>Freelance, Steam</em></h2>
+            <p class="duration">2022 – Present</p>
             <ul>
-                <li>Oversaw team of software developers, graphic designers and sound designers to create custom GUI applications which
-                demanded series of tests and quality control to ensure flawless deliverables</li>
-                <li>Designed and implemented custom sound design tools and generative audio systems using using advanced audio tools,,
-                applying real-time DSP concepts and creative coding techniques to build modular, reusable scripts for sound design</li>
+                <li>Used the game engine Unity to create indie video games for solo and team projects by leveraging C# scripts to implement core gameplay mechanics and interactive features, plus created and maintained audio pipelines.</li>
             </ul>
         </div>
         <div class="job">
-            <h2>Educator for Electronic Music Production - <em>SoundFly</em></h2>
-            <p class="duration">2021 - 2025</p>
+            <h2>Sample Pack Content Creator - <em>Samples from Mars, Epic Stock Media, Splice</em></h2>
+            <p class="duration">2012 – Present</p>
             <ul>
-                <li>Mentored students by creating detailed lesson plans and videos that covered all facets of
-                 electronic music production
-                </li>
+                <li>Oversaw team of software developers, graphic designers and sound designers to create custom GUI applications which demanded series of tests and quality control to ensure flawless deliverables.</li>
+                <li>Designed unique audio sample packs for content creators by using advanced audio tools and reusable scripts.</li>
             </ul>
         </div>
         <div class="job">
             <h2>Sound Designer, Mixer and Composer - <em>Freelance, Hyperballad Music</em></h2>
-            <p class="duration">2008 - 2024</p>
+            <p class="duration">2008 – 2024</p>
             <ul>
-                <li>Provided 360 audio solutions for international advertising campaigns by organizing teams of creatives while maintaining
-                fluent communication with clients to assure project alignment and timely delivery of assets</li>
-                <li>Translated client requirements into actionable project plans, ensuring technical feasibility and successful execution
-                </li>
+                <li>Provided 360 audio solutions for international advertising campaigns by organizing teams of creatives while maintaining fluent communication with clients to assure project alignment and timely delivery of assets.</li>
+                <li>Translated client requirements into actionable project plans, ensuring technical feasibility and successful execution.</li>
             </ul>
         </div>
         <div class="job">
-            <h2>Head of Content Curation - <em>Livestream (Now Vimeo)</em></h2>
-            <p class="duration">2009 - 2013</p>
+            <h2>Head of Content Curation - <em>Livestream (now Vimeo)</em></h2>
+            <p class="duration">2009 – 2013</p>
             <ul>
-                <li>Led a team of content curators responsible for moderating and approving streaming channels, while coordinating responses
-                to customer support inquiries to ensure compliance, quality control, and user satisfaction
-                </li>
-                <li>Identified, documented, and communicated platform bugs and user experience issues to the development team, contributing
-                to ongoing improvements in platform stability and performance
-                </li>
+                <li>Led a team of content curators responsible for moderating and approving streaming channels, while coordinating responses to customer support inquiries to ensure compliance, quality control, and user satisfaction.</li>
+                <li>Identified, documented, and communicated platform bugs and user experience issues to the development team, contributing to ongoing improvements in platform stability and performance.</li>
             </ul>
         </div>
 
@@ -98,13 +85,6 @@
         <section class="experience">
             <!-- Introduction text with name highlight -->
             <h1 class="section-title"><span class="section-number"></span>Education</h1>
-            <div class="job">
-                <h2>Boston University - <em>Boston</em></h2>
-                <p class="duration">2004 - 2008</p>
-                <ul>
-                    <li>B.A in History || Minor in Communications</li>
-                </ul>
-            </div>
             <div class="job">
                 <h2>The Tech Academy - <em>Online</em></h2>
                 <p class="duration">2023 - 2024</p>
@@ -115,6 +95,13 @@
                     T-SQL/SQL, CRUD, MVC, HTML, CSS, JavaScript, Agile / SCRUM and web application development. Completed numerous practical projects available
                     <a href="https://github.com/ahamadey27/Coding-Portfolio" target="_blank" style="color: #295f4e;">here</a>
                     </li>
+                </ul>
+            </div>
+            <div class="job">
+                <h2>Boston University - <em>Boston</em></h2>
+                <p class="duration">2004 - 2008</p>
+                <ul>
+                    <li>B.A in History || Minor in Communications</li>
                 </ul>
             </div>
             <div class="job">
