Refined resume and experience descriptions for clarity and detail, emphasizing current skills and projects.

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -41,11 +41,17 @@
             <!-- Introduction text with name highlight -->
         <h1 class="section-title"><span class="section-number"></span> Experience</h1>
         <div class="job">
-            <h2>Junior Software Developer (Student, Web Apps)</h2>
+            <h2>Junior Software Developer</h2>
             <p class="duration">2023 – Present</p>
             <ul>
-                <li>Studied core backend and full stack development daily through certifications, coding challenges, books, and algorithm/design pattern practice to strengthen foundational skills.</li>
-                <li>Built nearly a dozen practical web apps in Azure to apply coding concepts and workflows, including creative personal projects like a wake alert tool that tracks passing freighters via API for surf timing and a greedy-algorithm-based lumber cutter app that optimizes board usage.</li>
+                <li>Designing and developing subscription-based SaaS web apps using Blazor WebAssembly and .NET, with public-facing
+                functionality and Firebase integration for authentication and data management, including an animal shelter medication
+                tracker and an audio plugin manager for organizing user-owned products and serial numbers</li>
+
+                <li>Deployed nearly a dozen practical web apps to Azure to reinforce backend and full-stack fundamentals, including creative
+                tools like a wake alert system that uses a vessel tracking API for surf timing, and a greedy algorithm–powered lumber
+                optimization calculator for efficient board cutting</li>
+
             </ul>
         </div>
         <div class="job">
