--- a/PortfolioWebsite/about.html
+++ b/PortfolioWebsite/about.html
@@ -40,19 +40,13 @@
         <section class="about about-flex" style="display: flex; flex-direction: row; align-items: flex-start; justify-content: space-between; height: 100%; min-height: 0;">
             <div class="about-text-col" style="flex:2; display:flex; flex-direction:column; justify-content:center;">
                 <h1 class="section-title" style="margin-bottom:2rem;">About Me</h1>
-                <p>Hey there! I'm Alex Hamadey, a .NET developer based in Kingston, NY and New York City.</p>
+                <p>I’m a junior software developer eager to grow within a collaborative team environment that values shared problem-solving throughout the entire software development lifecycle.</p>
 
-                <p>For the past 15 years, I've juggled jobs in sound design, music production, plugin/GUI development, 
-                mixing, and video game audio. I often utilized technology to create sounds (using scripts in ChucK or Max/MSP, for example), 
-                automate repetitive tasks using command-line commands, or script custom functions within sampling software.</p>
+                <p>I’m transitioning from my previous career as a sound designer for commercials, mixed media, and video games. That work demanded consistent, real-time client communication, where I often had to translate non-technical explanations into sonic results—a skill that translates across industries. It was also common for me to quickly learn complicated software on the spot, such as an app that uses targeted algorithms to silence unwanted noise or a plugin that generates 5.1 sound from a stereo file. However, the most important skill I gained was leveraging programming languages to solve hyper-specific problems when no third-party solutions existed. For example, I used ChucK to create a function that rendered synthetic bird calls for a sample pack and Python to automatically convert and render audio files based on certain rules.</p>
 
-                <p>When I started working in video game audio, I discovered a passion for coding and software development—the ability 
-                to streamline ideas, enhance workflows, and solve problems beyond the limitations of 
-                existing software became intoxicating</p>
+                <p>As I moved toward custom software solutions, I began freelancing as a video game sound designer. There, I learned C# to implement and maintain audio pipelines in Unity and wrote event-based scripts to connect middleware audio management applications like Wwise. I also coded and designed a video game from scratch, which is now available on Steam. As my fascination with programming grew, I enrolled in The Tech Academy’s full stack bootcamp, and shortly after graduating, I committed fully to pursuing software development.</p>
 
-                <p>As I transition into software development, I bring a tenacious, creative approach to 
-                problem-solving and a commitment to continuous learning. I'm excited to apply these qualities 
-                to my new career as a junior developer.</p>
+                <p>Recently, I’ve been building web applications using C#, ASP.NET, and Azure to address specific problems. For example, I built a Samurai Movie Database to organize my extensive DVD collection of the genre using Entity Framework and SQLite, and a Wake Advisor that fetches tide and vessel data from external APIs to predict the best time to surf the wake of large southbound freighters on the Hudson River. I’m currently working on a SaaS web application that tracks administered medications for animal shelters using Firebase on the backend, with a targeted release later this year. I’m also contributing to open source software to gain more collaborative real-world  experience.</p>
             </div>
             <div class="about-img-col" style="flex:1; display:flex; align-items:flex-start; justify-content:flex-end; margin-top:0; margin-right: 60px;">
                 <img src="assets/images/profile.jpg" alt="Profile Picture" class="profile-pic about-pic-highlight" style="max-width:320px; height:500px; border-radius:18px; object-fit:cover; box-shadow:0 8px 32px 0 rgba(0,0,0,0.18); border:4px solid var(--color-accent); margin-top:0;" />
