Updated experience section to enhance clarity and detail, including new project descriptions and contributions to open-source projects.

--- a/PortfolioWebsite/experience.html
+++ b/PortfolioWebsite/experience.html
@@ -44,13 +44,11 @@
             <h2>Junior Software Developer</h2>
             <p class="duration">2023 – Present</p>
             <ul>
-                <li>Designing and developing subscription-based SaaS web apps using Blazor WebAssembly and .NET, with public-facing
-                functionality and Firebase integration for authentication and data management, including an animal shelter medication
-                tracker and an audio plugin manager for organizing user-owned products and serial numbers</li>
+                <li>Designing and developing subscription-based SaaS web apps using Blazor WebAssembly and .NET, with public-facing functionality and Firebase integration for authentication and data management, including an animal shelter medication tracker that will be coming to market soon </li>
 
-                <li>Deployed nearly a dozen practical web apps to Azure to reinforce backend and full-stack fundamentals, including creative
-                tools like a wake alert system that uses a vessel tracking API for surf timing, and a greedy algorithm–powered lumber
-                optimization calculator for efficient board cutting</li>
+                <li>Deployed nearly a dozen practical web apps to Azure and Railway to reinforce backend and full-stack fundamentals</li>
+
+                <li>Contributed to open-source GitHub projects to strengthen technical skills and gain real-world development experience</li>
 
             </ul>
         </div>
@@ -62,7 +60,7 @@
             </ul>
         </div>
         <div class="job">
-            <h2>Sample Pack Content Creator - <em>Samples from Mars, Epic Stock Media, Splice</em></h2>
+            <h2>Sample Pack Content Creator - <em>Yamaha, Samples from Mars, Epic Stock Media, Splice</em></h2>
             <p class="duration">2012 – Present</p>
             <ul>
                 <li>Oversaw team of software developers, graphic designers and sound designers to create custom GUI applications which demanded series of tests and quality control to ensure flawless deliverables.</li>
