--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -45,18 +45,12 @@
                 <img src="assets/images/ecommerce.jpg" alt="Screenshot of Portfolio" class="project-screenshot" />
             </div>
             <div class="project-content-col">
-                <h2>Simple ECommerce App</h2>
+                <h2>Animal Shelter Medication Tracking</h2>
                 <p>
-                    This project is a full-featured eCommerce web application that allows users to browse products, 
-                    add items to a shopping cart, and complete purchases through a streamlined checkout process. 
-                    The app features user authentication, product management, and order tracking, providing a realistic 
-                    online shopping experience. It is designed with a clean, responsive interface for both desktop and mobile users.
+                    This project is a comprehensive animal shelter management system that enables shelter staff to efficiently track animals, schedule medications, and monitor care routines through an intuitive web interface. The application features real-time medication tracking, animal profile management, and comprehensive reporting capabilities, providing shelter workers with the tools they need to ensure proper animal care. It is designed with a mobile-first, responsive interface that works seamlessly on tablets and smartphones, allowing staff to log medication administration and access animal information from anywhere in the facility.
                 </p>
                 <p>
-                    Built using ASP.NET Core Web API and Entity Framework Core, the backend supports secure user registration, 
-                    JWT-based authentication, and robust CRUD operations for products and orders. The project demonstrates 
-                    best practices in RESTful API design, database modeling, and secure user management, making it a solid 
-                    foundation for scalable eCommerce solutions.
+                    Built using Blazor WebAssembly and Google Firebase, the application delivers a modern single-page application experience with real-time data synchronization and offline capabilities. The frontend leverages .NET 9 and Blazor's component-based architecture, while Firebase provides secure authentication, cloud-based Firestore database storage, and scalable hosting infrastructure. The project demonstrates best practices in progressive web app development, real-time data management, and cloud-native architecture, making it an ideal solution for animal shelters seeking to modernize their care tracking and medication management workflows.
                 </p>
                 <p class="project-links">
                     <a href="https://github.com/ahamadey27/EcommerceAPI" target="_blank">GitHub</a> |
