Update project links for Animal Shelter App in projects.html

--- a/PortfolioWebsite/projects.html
+++ b/PortfolioWebsite/projects.html
@@ -53,8 +53,8 @@
                     Built using Blazor WebAssembly and Google Firebase, the application delivers a modern single-page application experience with real-time data synchronization and offline capabilities. The frontend leverages .NET 9 and Blazor's component-based architecture, while Firebase provides secure authentication, cloud-based Firestore database storage, and scalable hosting infrastructure. The project demonstrates best practices in progressive web app development, real-time data management, and cloud-native architecture, making it an ideal solution for animal shelters seeking to modernize their care tracking and medication management workflows.
                 </p>
                 <p class="project-links">
-                    <a href="https://github.com/ahamadey27/EcommerceAPI" target="_blank">GitHub</a> |
-                    <a href="https://ecommerceapi-production-d3df.up.railway.app/" target="_blank">Live Demo</a>
+                    <a href="https://github.com/ahamadey27/AnimalShelterApp/tree/main/AnimalShelterApp/AnimalShelterApp" target="_blank">GitHub</a> |
+                    <a href="https://mango-plant-06b452110.3.azurestaticapps.net/" target="_blank">Live Demo</a>
                 </p>
             </div>
             
